--- a/solr/solr-ref-guide/src/dsp.adoc
+++ b/solr/solr-ref-guide/src/dsp.adoc
@@ -23,7 +23,7 @@ Digital Signal Processing (DSP).
 
 The `dotProduct` function is used to calculate the dot product of two arrays.
 The dot product is the fundamental calculation for the DSP functions discussed in this section. Before diving into
-the more complex DSP functions its useful to get an understanding of how the dot product calculation operates.
+the more complex DSP functions its useful to get an understanding of how the dot product calculation works.
 
 === Combining two arrays
 
@@ -38,7 +38,9 @@ Then the `mean` function is then used to compute the mean of the first array whi
 Both the dot product and the mean are included in the output.
 
 When we look at the output of this expression we see that the *dot product* and the *mean* of the first array
-are both 18. The dot product function actually calculated the mean of the first array.
+are both 30.
+
+The dot product function calculated the mean of the first array.
 
 [source,text]
 ----
@@ -69,7 +71,7 @@ When this expression is sent to the /stream handler it responds with:
 }
 ----
 
-To get a better understanding of how the dot product calculation operates we can perform the steps of the
+To get a better understanding of how the dot product calculated the mean we can perform the steps of the
 calculation using vector math and look at the output of each step.
 
 In the example below the `ebeMultiply` function performs an element-by-element multiplication of
@@ -78,7 +80,7 @@ multiplication is assigned to variable *c*.
 
 In the next step the `add` function adds all the elements of the array in variable *c*.
 
-Notice that multiplying each element of the first array by .2 and then adding the values is
+Notice that multiplying each element of the first array by .2 and then adding the results is
 equivalent to the formula for computing the mean of the first array. The formula for computing the mean
 of an array is to add all the elements and divide by the number of elements.
 
@@ -163,12 +165,12 @@ When this expression is sent to the /stream handler it responds with:
 
 === Representing Correlation
 
-Often when we think of correlation, we are thinking of *Pearson* correlation in the field of statistics. But the definition of
+Often when we think of correlation, we are thinking of *Pearsons* correlation in the field of statistics. But the definition of
 correlation is actually more general: a mutual relationship or connection between two or more things.
 In the field of digital signal processing the dot product is used to represent correlation. The examples below demonstrates
 how the dot product can be used to represent correlation.
 
-In the example below the dot product is computed for two vectors. Notice that the vectors have different values that they fluctiate
+In the example below the dot product is computed for two vectors. Notice that the vectors have different values that fluctuate
 together. The output of the dot product is 190, which is hard to reason about because because its not scaled.
 
 [source,text]
@@ -200,11 +202,11 @@ When this expression is sent to the /stream handler it responds with:
 
 One approach to scaling the dot product is to first scale the vectors so that both vectors have a magnitude of 1. Vectors with a
 magnitude of 1, also called unit vectors, are used when comparing only the angle between vectors rather then the magnitude.
-The `unitize` function can be used to unitize the vectors before calling the dot product.
+The `unitize` function can be used to unitize the vectors before calculating the dot product.
 
-Notice in the example below the dot product result, variable *e*, is effectively 1. When working with unit vectors the dot product
-will be scaled between 1 and -1. Also notice in the example `cosineSimilarity` is calculated on the unscaled vectors and the
-answer is also effectively 1. This is because cosine similarity is scaled dot product.
+Notice in the example below the dot product result, set to variable *e*, is effectively 1. When applied to unit vectors the dot product
+will be scaled between 1 and -1. Also notice in the example `cosineSimilarity` is calculated on the *unscaled* vectors and the
+answer is also effectively 1. This is because *cosine similarity* is the scaled *dot product*.
 
 
 [source,text]
@@ -238,8 +240,9 @@ When this expression is sent to the /stream handler it responds with:
 }
 ----
 
-If we transposed the first two numbers in the first array, so that the vectors
-are not perfectly correlated, we see that cosine similarity drops.
+If we transpose the first two numbers in the first array, so that the vectors
+are not perfectly correlated, we see that the cosine similarity drops. This illustrates
+how the dot product represents correlation.
 
 [source,text]
 ----
@@ -268,8 +271,109 @@ When this expression is sent to the /stream handler it responds with:
 }
 ----
 
-
 == Convolution
+
+The `conv` function calculates the convolution of two vectors. The convolution is calculated by *reversing*
+the second vector and sliding it across the first vector. The *dot product* of the two vectors
+is calculated at each point as the second vector is slid across the first vector.
+The dot products are collected in the *third vector* which is the *convolution* of the two vectors.
+
+=== Moving Average
+
+Before looking at an example of convolution its useful to review the `movingAvg` function. The moving average
+function computes a moving average by sliding a window across a vector and computing
+the average of the window at each shift. If that sounds similar to convolution, that's because the `movingAvg` function
+is syntactic sugar for convolution.
+
+Below is an example of a moving average with a window size of 5. Notice that original vector had 13 elements
+but the result of the moving average has only 9 elements. This is because the `movingAvg` function
+only begins generating results when it has a full window. In this case because the window size is 5 so the
+moving average starts generating results from the 4th index of the original array, which is the value 5.
+
+[source,text]
+----
+let(a=array(1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1),
+    b=movingAvg(a, 5))
+----
+
+When this expression is sent to the /stream handler it responds with:
+
+[source,json]
+----
+{
+  "result-set": {
+    "docs": [
+      {
+        "b": [
+          3,
+          4,
+          5,
+          5.6,
+          5.8,
+          5.6,
+          5,
+          4,
+          3
+        ]
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
+----
+
+=== Convolutional Smoothing
+
+The moving average can also be computed with the convol
+
+
+[source,text]
+----
+let(a=array(1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1),
+    b=array(.2, .2, .2, .2, .2),
+    c=conv(a, b))
+----
+
+When this expression is sent to the /stream handler it responds with:
+
+[source,json]
+----
+{
+  "result-set": {
+    "docs": [
+      {
+        "c": [
+          0.2,
+          0.6000000000000001,
+          1.2,
+          2.0000000000000004,
+          3.0000000000000004,
+          4,
+          5,
+          5.6000000000000005,
+          5.800000000000001,
+          5.6000000000000005,
+          5.000000000000001,
+          4,
+          3,
+          2,
+          1.2000000000000002,
+          0.6000000000000001,
+          0.2
+        ]
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
+----
+
 
 == Cross-Correlation
 
@@ -278,5 +382,3 @@ When this expression is sent to the /stream handler it responds with:
 == Auto-Correlation
 
 == Discrete Fourier Transform
-
-
